styles/index.css
/* purgecss start ignore */
@tailwind base;
@tailwind components;
/* purgecss end ignore */

:root {
	--c-heatmap-0: #eee;
	--c-heatmap-1: #b3e8d8;
	--c-heatmap-2: #80d9be;
	--c-heatmap-3: #33c297;
	--c-heatmap-4: #008f64;
}

[data-theme="dark"] {
	--c-heatmap-0: #142e25;
	--c-heatmap-1: #143a2d;
	--c-heatmap-2: #114130;
	--c-heatmap-3: #0f513a;
	--c-heatmap-4: #0d5f42;
}

html {
	font-family: "Inter", sans-serif;
}

body {
	overscroll-behavior-y: none;
}

nav .logo svg {
	@apply h-8 w-8 !important;
	/*color: #00ad71; */
}

@tailwind utilities;

.input {
	@apply bg-gray-200 border border-gray-200 p-2 rounded-md;
}

.pin-c-x {
	left: 50%;
	transform: translateX(-50%);
}

h1 {
	@apply text-3xl font-bold;
}

h2 {
	@apply text-2xl;
}

h3 {
	@apply text-xl;
}

h4 {
	@apply text-lg;
}

h5 {
	@apply text-sm;
}

small {
	@apply text-sm;
}

.heading {
	@apply flex-none mb-2 text-xs font-semibold tracking-wider text-gray-500 uppercase leading-4;
}

input,
textarea {
	@apply bg-white px-2.5 py-1.5 rounded-md w-full block shadow-xs border border-gray-300 outline-none transition-all;
}

select {
	@apply px-2.5 py-1.5 rounded-md !important;
}

select:focus {
	@apply outline-none shadow-none border-green-300 !important;
}

input:disabled {
	@apply bg-gray-100 text-gray-300;
}

input:focus {
	@apply border-green-300;
}

input[type="checkbox"] {
	@apply w-4 h-4 text-green-500 transition duration-150 ease-in-out;
}

a {
	@apply text-green-500;
}

p.help {
	@apply text-xs text-gray-500;
}

.remaining {
	@apply bg-orange-100 text-orange-700 !important;
}

.Modal {
}

.Overlay {
}

.force-block {
	display: block !important;
}

.react-calendar-heatmap text {
	font-size: 10px;
	fill: #aaa;
}

.react-calendar-heatmap .react-calendar-heatmap-small-text {
	font-size: 5px;
}

.react-calendar-heatmap rect:hover {
	stroke: #555;
	stroke-width: 1px;
}

/*
 * Default color scale
 */

.react-calendar-heatmap .color-empty {
	fill: #eeeeee;
}

.react-calendar-heatmap .color-filled {
	fill: #8cc665;
}

.react-calendar-heatmap .is-today {
	stroke: gray;
}

.react-calendar-heatmap .color-scale-0 {
	fill: var(--c-heatmap-0);
}

.react-calendar-heatmap .color-scale-1 {
	fill: var(--c-heatmap-1);
}

.react-calendar-heatmap .color-scale-2 {
	fill: var(--c-heatmap-2);
}

.react-calendar-heatmap .color-scale-3 {
	fill: var(--c-heatmap-3);
}

.react-calendar-heatmap .color-scale-4 {
	fill: var(--c-heatmap-4);
}

.react-colorful {
	height: 120px !important;
	width: 120px !important;
}

.react-tags {
	@apply px-2.5 rounded-md w-full block shadow-xs border border-gray-300 outline-none transition-all;
	cursor: text;
	min-height: 38px;
	display: flex;
	align-items: center;
}

.react-tags.is-focused {
	@apply border-green-300;
}

.react-tags__selected {
	display: inline;
}

.react-tags__selected-tag {
	@apply inline-flex mr-2 p-1 text-xs border border-gray-200 bg-gray-50 rounded-md;
}

.react-tags__selected-tag:after {
	content: "\2715";
	color: #aaa;
	margin-left: 8px;
}

.react-tags__selected-tag:hover,
.react-tags__selected-tag:focus {
	@apply border-green-300;
}

.react-tags__search {
	display: inline-block;
	border-color: transparent;
	/* prevent autoresize overflowing the container */
	max-width: 100%;
}

@media screen and (min-width: 30em) {
	.react-tags__search {
		/* this will become the offsetParent for suggestions */
		position: relative;
	}
}

.react-tags__search-input {
	/* prevent autoresize overflowing the container */
	max-width: 100%;
	min-width: 200px;

	/* remove styles and layout from this element */
	margin: 0;
	padding: 0;
	border: 0;
	outline: none;

	border: none;
	box-shadow: none;

	/* match the font styles */
	font-size: inherit;
	line-height: inherit;
}

.react-tags__search-input::-ms-clear {
	display: none;
}

.react-tags__suggestions {
	position: absolute;
	top: 100%;
	left: 0;
	width: 100%;
}

@media screen and (min-width: 30em) {
	.react-tags__suggestions {
		width: 240px;
	}
}

.react-tags__suggestions ul {
	margin: 4px -1px;
	padding: 0;
	list-style: none;
	background: white;
	border: 1px solid #d1d1d1;
	border-radius: 2px;
	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
}

.react-tags__suggestions li {
	border-bottom: 1px solid #ddd;
	padding: 6px 8px;
}

.react-tags__suggestions li mark {
	text-decoration: underline;
	background: none;
	font-weight: 600;
}

.react-tags__suggestions li:hover {
	cursor: pointer;
	background: #eee;
}

.react-tags__suggestions li.is-active {
	background: #b7cfe0;
}

.react-tags__suggestions li.is-disabled {
	opacity: 0.5;
	cursor: auto;
}

td,
th {
	@apply px-4 py-2 border;
}

.prose figure {
	@apply flex flex-col items-center justify-center p-4 bg-gray-100 rounded-md;
}

.prose figure figcaption {
	@apply pt-4 text-xs;
}

#wall-of-love .twitter-tweet {
	margin: 0px !important;
}

#wall-of-love img {
	@apply rounded-md;
}

.egg-rainbow {
	animation: egg-rainbow-animation 5s infinite;
}

.bg-bubbles {
	background-image: url(/img/bubble-bg.png) !important;
	background-size: cover;
	background-position: center;
}

.bg-bubbles-gradient {
	background: white;
}

@screen sm {
	.bg-bubbles-gradient {
		background: linear-gradient(
				90deg,
				rgba(255, 255, 255, 1) 0%,
				rgba(255, 255, 255, 1) 50%,
				rgba(0, 212, 255, 0) 100%
			),
			url(/img/bubble-bg.png) !important;
		background-size: cover;
		background-position: center;
	}
}

@keyframes egg-rainbow-animation {
	0% {
		color: orange;
	}
	10% {
		color: purple;
	}
	20% {
		color: red;
	}
	30% {
		color: CadetBlue;
	}
	40% {
		color: yellow;
	}
	50% {
		color: coral;
	}
	60% {
		color: green;
	}
	70% {
		color: cyan;
	}
	80% {
		color: DeepPink;
	}
	90% {
		color: DodgerBlue;
	}
	100% {
		color: orange;
	}
}

